# ChatCPP

./: CMakeLists.txt  Makefile  chat.html  epollhandler.cpp  epollhandler.h  scripts.js  style.css  tcpconnection.cpp  tcpconnection.h  tcpsocket.cpp  tcpsocket.h
Chat/: Chat.cpp  Chat.h  Message.h  User.cpp  User.h
HTTPServer/: HTTPServer.cpp  HTTPServer.h  RequestUtils.cpp  RequestUtils.h  main.cpp
TCPServer/: TCPServer.cpp  TCPServer.h  main.cpp
model/: HTTPException.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  SignalHandler.cpp  SignalHandler.h  epollhandler.cpp  epollhandler.h  handler.cpp  handler.h  tcpsocket.cpp  tcpsocket.h
server/: main.cpp  server.cpp  server.h
